# mac-kimi-usage-widget

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/macos/: Info.plist
scripts/: build-macos-app.sh
src/: api.rs  config.rs  log.rs  main.rs  prompt.rs  report.rs  usage.rs
