[package]
name = "kimi-usage-widget"
version = "0.1.0"
authors = ["rontam"]
edition = "2024"
rust-version = "1.85"
description = "A lightweight native macOS menu-bar widget for Kimi Code usage."
repository = "https://github.com/rontam/kimi-usage-widget"
license = "MIT"
keywords = ["kimi", "kimi-code", "macos", "menu-bar", "tray"]
categories = ["gui"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tao = "0.35.3"
toml = "1.1.2"
tray-icon = "0.24.1"

[dev-dependencies]
tempfile = "3.14.0"
